Atualização final do projeto

--- a/src/styles/components/projectcontainer.sass
+++ b/src/styles/components/projectcontainer.sass
@@ -8,23 +8,28 @@
 
     .social-btn 
          width: 100%
+
     
 .project
     display: grid
-    overflow: hidden
-    flex-wrap: wrap
+    grid-template-columns: 70%
     gap: 1.5rem
-    width: 50%
     margin: 1rem
     border: variables.$card-border-radius
     margin-bottom: .5rem
     border-radius: variables.$card-border-radius
 
 
-.repopaodequeijo
+.lista-projetos 
+        border: border-box
+        border-radius: variables.$card-border-radius
+ 
+
+.projetos
     width: 100%
 
-.generator
-    width: 100%
+.projetos:hover
+    width: 98%
+
 
 
