reponsividade das telas

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -5,11 +5,11 @@
     margin: 0
     font-family: variables.$font-stack
     box-sizing: border-box
-
+    
 
 body
     background: variables.$body-bg-color
-
+    min-width: 550px
 
 a, svg 
    transition: .4s
