atualização das tecnologias

--- a/src/styles/components/projectcontainer.sass
+++ b/src/styles/components/projectcontainer.sass
@@ -23,6 +23,10 @@
 .lista-projetos 
         border: border-box
         border-radius: variables.$card-border-radius
+        transition: transform .5s
+
+.lista-projetos:hover
+        transform: scale(1.1)
  
 
 .projetos
