--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -9,7 +9,9 @@
 
 body
     background: variables.$body-bg-color
-    min-width: 550px
+    @media screen and (max-width: 945px)
+    min-width: 490px
+
 
 a, svg 
    transition: .4s
