--- a/src/styles/components/maincontent.sass
+++ b/src/styles/components/maincontent.sass
@@ -7,6 +7,7 @@
     border-radius: variables.$container-border-radius
     position: relative  
     top: 5rem
+    min-width: 350px
 
     section
         display: flex
